fix animation jumping

--- a/src/components/zen-popover/animations.scss
+++ b/src/components/zen-popover/animations.scss
@@ -1,4 +1,5 @@
 .popup {
+  -webkit-backface-visibility: hidden; // prevent transition jumping on Chrome
   transition: transform 0.15s ease-out, opacity 0.15s linear;
 }
 
